# apps/api/src/captures/captures.module.ts
@@ -1,7 +1,7 @@
 import { Module } from '@nestjs/common';
 import { CapturesController } from './captures.controller';
 import { CapturesService } from './captures.service';
-import { JournalModule } from '../journal/journal.module';
+import { JournalModule } from '../relations/api-journal/journal.module';
 import { PrivateStorageService } from '../media/private-storage.service';
 
 @Module({
